<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/on_off_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_user_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_key_profile"
                    android:text="@string/login_in_profile" />

                <TextView
                    android:id="@+id/tv_login"
                    style="@style/tv_value_profile"
                    android:text="@string/nothing" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/themes"
                android:textSize="25sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="40dp"
                android:text="@string/not_all_work"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/themeGroup"
                android:layout_width="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/themeLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_theme" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/themeDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_theme" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/themeBattery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_battery_theme" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/themeSystem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_themes" />
            </RadioGroup>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/b_logout"
                style="@style/b_login_auth"
                android:backgroundTint="?attr/colorSecondaryVariant"
                android:text="@string/logout"
                android:visibility="visible" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>