<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/on_off_favorite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.favorite.FavoriteFragment">


    <TextView
        android:id="@+id/tv_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="@string/favorite"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_home"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_favorite" />

    <ScrollView
        android:id="@+id/sv_favorite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <TextView
                style="@style/tv_movie_tv_series_list"
                android:text="@string/films" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_favorite"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="1dp"
                android:scrollbars="vertical"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_no_favorite_movie"
                style="@style/tv_nothing_find_list"
                android:text="@string/no_favorite_movies"
                android:visibility="gone" />

            <TextView
                style="@style/tv_movie_tv_series_list"
                android:text="@string/series" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tv_series_favorite"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scrollbars="vertical"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_no_favorite_tv_series"
                style="@style/tv_nothing_find_list"
                android:text="@string/no_favorite_tv_series"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>