<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.search.SearchFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/tiet_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/write_name_movie"
            android:inputType="text"
            android:maxLength="50" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="5dp"
        android:text="@string/search"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_search" />


    <ScrollView
        android:id="@+id/sv_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <TextView
                style="@style/tv_movie_tv_series_list"
                android:text="@string/films" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_rv_movie_search"
                    style="@style/tv_movie_tv_series_card_rc_view"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="?attr/colorTertiary"
                    app:strokeWidth="0.4dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_movie_search"
                        style="@style/tv_movie_tv_series_rc_view" />
                </com.google.android.material.card.MaterialCardView>

                <ProgressBar
                    android:id="@+id/pb_rv_movie_search"
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/card_rv_movie_search"
                    app:layout_constraintEnd_toEndOf="@+id/card_rv_movie_search"
                    app:layout_constraintStart_toStartOf="@+id/card_rv_movie_search"
                    app:layout_constraintTop_toTopOf="@+id/card_rv_movie_search" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_nothing_find_movies_search"
                style="@style/tv_nothing_find_list"
                android:text="@string/nothing_find"
                android:visibility="gone" />

            <TextView
                style="@style/tv_movie_tv_series_list"
                android:text="@string/series" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_tv_series_search"
                    style="@style/tv_movie_tv_series_card_rc_view"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="?attr/colorTertiary"
                    app:strokeWidth="0.4dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_tv_series_search"
                        style="@style/tv_movie_tv_series_rc_view" />
                </com.google.android.material.card.MaterialCardView>

                <ProgressBar
                    android:id="@+id/pb_rv_tv_series_search"
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/card_tv_series_search"
                    app:layout_constraintEnd_toEndOf="@+id/card_tv_series_search"
                    app:layout_constraintStart_toStartOf="@+id/card_tv_series_search"
                    app:layout_constraintTop_toTopOf="@+id/card_tv_series_search" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_nothing_find_tv_series_search"
                style="@style/tv_nothing_find_list"
                android:text="@string/nothing_find"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>