<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.cinema.CinemaInfoActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_iv_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="50dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="?attr/colorTertiary"
                    app:strokeWidth="0.2dp">

                    <ImageView
                        android:id="@+id/iv_info"
                        android:layout_width="96dp"
                        android:layout_height="148dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/round_insert_photo_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tv_title_info"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/card_iv_info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/card_iv_info"
                    app:layout_constraintTop_toTopOf="@+id/card_iv_info" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/ib_switch_favorite_cinema"
                android:layout_width="50dp"
                android:layout_height="39dp"
                android:layout_gravity="end"
                android:layout_marginHorizontal="15dp"
                android:src="@drawable/round_star_border_24"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/tv_info_key"
                        android:text="@string/relise" />

                    <TextView
                        android:id="@+id/tv_releaseDate_info"
                        style="@style/tv_info_value"
                        android:text="@string/nothing" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/tv_info_key"
                        android:text="@string/runtime" />

                    <TextView
                        android:id="@+id/tv_runtime_info"
                        style="@style/tv_info_value"
                        android:text="@string/nothing" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/tv_info_key"
                        android:text="@string/actors" />

                    <TextView
                        android:id="@+id/tv_actors_info"
                        style="@style/tv_info_value"
                        android:text="@string/nothing" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/tv_info_key"
                        android:text="@string/genres" />

                    <TextView
                        android:id="@+id/tv_genres_info"
                        style="@style/tv_info_value"
                        android:text="@string/nothing" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="20dp" />

            <TextView
                style="@style/tv_info_key"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/tv_overview_info"
                style="@style/tv_info_value"
                android:layout_width="wrap_content"
                android:paddingBottom="50dp"
                android:text="@string/nothing" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/ib_back_info"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/click"
        android:padding="12dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/round_arrow_back_ios_new_24" />

    <ProgressBar
        android:id="@+id/pb_info"
        android:layout_width="74dp"
        android:layout_height="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_for_snackbar_cinema_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>