<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.home.HomeFragment">


    <TextView
        android:id="@+id/tv_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="@string/popular_today"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_home"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_popular" />

    <ScrollView
        android:id="@+id/sv_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:orientation="vertical">

            <TextView
                style="@style/tv_movie_tv_series_list"
                android:text="@string/films" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <GridView
                    android:id="@+id/gv_movies"
                    style="@style/gv_home"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/pb_gv_movie_home"
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    app:layout_constraintBottom_toBottomOf="@+id/gv_movies"
                    app:layout_constraintEnd_toEndOf="@+id/gv_movies"
                    app:layout_constraintStart_toStartOf="@+id/gv_movies"
                    app:layout_constraintTop_toTopOf="@+id/gv_movies" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/tv_movie_tv_series_list"
                android:text="@string/series" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <GridView
                    android:id="@+id/gv_tv_series"
                    style="@style/gv_home"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/pb_gv_tv_series_home"
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    app:layout_constraintBottom_toBottomOf="@+id/gv_tv_series"
                    app:layout_constraintEnd_toEndOf="@+id/gv_tv_series"
                    app:layout_constraintStart_toStartOf="@+id/gv_tv_series"
                    app:layout_constraintTop_toTopOf="@+id/gv_tv_series" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_logo_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/iv_logo_home"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pb_home"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_marginStart="23dp"
            android:layout_marginBottom="34dp"
            android:indeterminateTint="?attr/colorPink"
            app:layout_constraintBottom_toBottomOf="@+id/iv_logo_home"
            app:layout_constraintStart_toStartOf="@+id/iv_logo_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>